Made basic option layout

--- a/index.html
+++ b/index.html
@@ -17,19 +17,28 @@
         <p id="password-output">Some Password</p>
         <img id="pass-regen" src="style/images/copy.png" />
       </div>
-      <div class="body-box">
+      <div class="body-box option-box">
         <form>
-          <label for="pass-lenght">Password length:</label>
-          <input id="pass-length" type="range" min="8" max="128" />
-          <br />
-          <label for="inc-symbols">Include symbols:</label>
-          <input id="inc-symbols" name="inc-symbols" type="checkbox" />
-          <label for="inc-numbers">Include numbers:</label>
-          <input id="inc-numbers" name="inc-numbers" type="checkbox" />
-          <label for="inc-lowercase">Include lowercase characters:</label>
-          <input id="inc-lowercase" name="inc-lowercase" type="checkbox" />
-          <label for="inc-uppercase">Include uppercase characters:</label>
-          <input id="inc-uppercase" name="inc-uppercase" type="checkbox" />
+          <div class="form-field">
+            <label for="pass-lenght">Password length:</label>
+            <input id="pass-length" type="range" min="8" max="128" />
+          </div>
+          <div class="form-field">
+            <label for="inc-symbols">Include symbols:</label>
+            <input id="inc-symbols" name="inc-symbols" type="checkbox" />
+          </div>
+          <div class="form-field">
+            <label for="inc-numbers">Include numbers:</label>
+            <input id="inc-numbers" name="inc-numbers" type="checkbox" />
+          </div>
+          <div class="form-field">
+            <label for="inc-lowercase">Include lowercase characters:</label>
+            <input id="inc-lowercase" name="inc-lowercase" type="checkbox" />
+          </div>
+          <div class="form-field">
+            <label for="inc-uppercase">Include uppercase characters:</label>
+            <input id="inc-uppercase" name="inc-uppercase" type="checkbox" />
+          </div>
         </form>
       </div>
     </div>
