Added checkbox functions

--- a/index.html
+++ b/index.html
@@ -24,23 +24,43 @@
             <label for="pass-lenght"
               >Password length: <span id="pass-length-display"></span
             ></label>
-            <input id="pass-length" type="range" min="8" max="128" />
+            <input id="pass-length" type="range" min="8" max="64" value="16" />
           </div>
           <div class="form-field">
             <label for="inc-symbols">Include symbols:</label>
-            <input id="inc-symbols" name="inc-symbols" type="checkbox" />
+            <input
+              id="inc-symbols"
+              name="inc-symbols"
+              type="checkbox"
+              checked
+            />
           </div>
           <div class="form-field">
             <label for="inc-numbers">Include numbers:</label>
-            <input id="inc-numbers" name="inc-numbers" type="checkbox" />
+            <input
+              id="inc-numbers"
+              name="inc-numbers"
+              type="checkbox"
+              checked
+            />
           </div>
           <div class="form-field">
             <label for="inc-lowercase">Include lowercase characters:</label>
-            <input id="inc-lowercase" name="inc-lowercase" type="checkbox" />
+            <input
+              id="inc-lowercase"
+              name="inc-lowercase"
+              type="checkbox"
+              checked
+            />
           </div>
           <div class="form-field">
             <label for="inc-uppercase">Include uppercase characters:</label>
-            <input id="inc-uppercase" name="inc-uppercase" type="checkbox" />
+            <input
+              id="inc-uppercase"
+              name="inc-uppercase"
+              type="checkbox"
+              checked
+            />
           </div>
         </form>
       </div>
