Changed images toSVG and css teaks

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <div class="body-box password-box">
         <img
           id="pass-copy"
-          src="style/images/copy.png"
+          src="style/images/copy.svg"
           onclick="copyToClipboard()"
         />
         <p id="password-output">Some Password</p>
         <img
           id="pass-regen"
-          src="style/images/refresh.png"
+          src="style/images/reload.svg"
           onclick="refreshPassword()"
         />
       </div>
